# cxx-lox

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: dump_cpp_env.sh
example/: scope.lox
src/: Ast.cxxm  Ast.hpp  Environment.cxxm  Environment.hpp  Interpreter.cxxm  Interpreter.hpp  Lox.cpp  Lox.cxxm  Lox.hpp  LoxCallable.hpp  LoxFunction.hpp  Object.cxxm  Object.hpp  Parser.cxxm  Parser.hpp  Return.hpp  RuntimeError.cxxm  RuntimeError.hpp  Scanner.cxxm  Scanner.hpp  TokenType.cxxm  TokenType.hpp  main.cpp
